--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,6 +9,7 @@ $body-bg: darken($primary, 22);
 $body-color: lighten(#1B1B1E, 60);
 $headings-color: $white;
 $text-muted: lighten($dark, 56);
+$link-color: $secondary;
 
 $font-family-sans-serif: 'Roboto', sans-serif;
 $headings-font-family: 'Josefin Sans', sans-serif;
