--- a/src/scss/codeit.scss
+++ b/src/scss/codeit.scss
@@ -30,5 +30,9 @@
 @import './alert';
 @import './footer';
 @import './lists';
+
+@import './components/partials/timeline';
 @import './components/welcome';
 @import './components/about';
+
+@import './icons/style.scss';
