made site responsive

--- a/src/scss/codeit.scss
+++ b/src/scss/codeit.scss
@@ -20,6 +20,7 @@
 @import "bootstrap/scss/utilities";
 @import "bootstrap/scss/utilities/api";
 
+@import './body';
 @import './sections';
 @import './typography';
 @import './tiles';
