--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -1,5 +1,5 @@
 body {
-	background-image: url('../src/assets/pattern-5.svg');
+	background-image: url('../assets/pattern-5.svg');
 	background-repeat: repeat;
 	background-position: top;
 	background-size: 26000px;
