--- a/src/scss/icons/variables.scss
+++ b/src/scss/icons/variables.scss
@@ -1,5 +1,5 @@
 $icomoon-font-family: "icomoon" !default;
-$icomoon-font-path: "./src/scss/icons/fonts/" !default;
+$icomoon-font-path: "../scss/icons/fonts/" !default;
 
 $icon-svelte: "\e904";
 $icon-heart: "\e905";
