--- a/src/scss/codeit.scss
+++ b/src/scss/codeit.scss
@@ -35,5 +35,6 @@
 @import './components/partials/timeline';
 @import './components/welcome';
 @import './components/about';
+@import './components/experience';
 
 @import './icons/style.scss';
