--- a/src/scss/codeit.scss
+++ b/src/scss/codeit.scss
@@ -31,10 +31,12 @@
 @import './alert';
 @import './footer';
 @import './lists';
+@import './cards';
 
 @import './components/partials/timeline';
 @import './components/welcome';
 @import './components/about';
 @import './components/experience';
+@import './components/portfolio';
 
 @import './icons/style.scss';
