--- a/src/scss/components/partials/_timeline.scss
+++ b/src/scss/components/partials/_timeline.scss
@@ -51,6 +51,7 @@
     }
 
     ul {
+        font-family: $font-family-monospace;
         display: flex;
         list-style-type: none;
         padding: 0;
