--- a/src/scss/icons/variables.scss
+++ b/src/scss/icons/variables.scss
@@ -1,5 +1,5 @@
 $icomoon-font-family: "icomoon" !default;
-$icomoon-font-path: "../scss/icons/fonts/" !default;
+$icomoon-font-path: "./icons/fonts" !default;
 
 $icon-svelte: "\e904";
 $icon-heart: "\e905";
@@ -7,6 +7,7 @@ $icon-envelope-o: "\e903";
 $icon-checkmark: "\e902";
 $icon-check-alt: "\e901";
 $icon-mouse: "\e900";
+$icon-project: "\e925";
 $icon-whatsapp: "\ea93";
 $icon-github: "\eab0";
 $icon-linkedin: "\eac9";
