--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -10,6 +10,7 @@
         padding: 3rem 0;
 
         span {
+            font-family: $font-family-monospace;
             color: $text-muted;
         }
 
