--- a/src/scss/icons/style.css
+++ b/src/scss/icons/style.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'icomoon';
   src:
-    url('fonts/icomoon.ttf?vc6bnr') format('truetype'),
-    url('fonts/icomoon.woff?vc6bnr') format('woff'),
-    url('fonts/icomoon.svg?vc6bnr#icomoon') format('svg');
+    url('fonts/icomoon.ttf?9xyxoe') format('truetype'),
+    url('fonts/icomoon.woff?9xyxoe') format('woff'),
+    url('fonts/icomoon.svg?9xyxoe#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -42,6 +42,9 @@
 }
 .icon-mouse:before {
   content: "\e900";
+}
+.icon-project:before {
+  content: "\e925";
 }
 .icon-whatsapp:before {
   content: "\ea93";
