--- a/src/scss/icons/style.scss
+++ b/src/scss/icons/style.scss
@@ -3,9 +3,9 @@
 @font-face {
   font-family: '#{$icomoon-font-family}';
   src:
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?vc6bnr') format('truetype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?vc6bnr') format('woff'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?vc6bnr##{$icomoon-font-family}') format('svg');
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?9xyxoe') format('truetype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?9xyxoe') format('woff'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?9xyxoe##{$icomoon-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -55,6 +55,11 @@
 .icon-mouse {
   &:before {
     content: $icon-mouse; 
+  }
+}
+.icon-project {
+  &:before {
+    content: $icon-project; 
   }
 }
 .icon-whatsapp {
