--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -5,7 +5,7 @@ body {
 	background-size: 26000px;
 
 	main {
-		padding: 1rem;
+		padding: 0 1rem;
 		margin: 0;
 		border-color: darken(#3d2e8c, 15);
 	}
