--- a/src/scss/components/_experience.scss
+++ b/src/scss/components/_experience.scss
@@ -1,4 +1,8 @@
 #experience {
+    .codeit-tiles-tile {
+        opacity: 0;
+    }
+
     @include media-breakpoint-down(lg) {  
         .codeit-tiles {
             &-tile {
