--- a/src/scss/components/_portfolio.scss
+++ b/src/scss/components/_portfolio.scss
@@ -4,6 +4,7 @@
         padding: 2rem;
         border-radius: 15px;
         box-shadow: 0 10px 30px -15px darken($primary, 25);
+        opacity: 0;
 
         &-header {
             .icon {
