--- a/src/scss/codeit.scss
+++ b/src/scss/codeit.scss
@@ -34,6 +34,7 @@
 @import './cards';
 
 @import './components/partials/timeline';
+@import './components/partials/nav';
 @import './components/welcome';
 @import './components/about';
 @import './components/experience';
