--- a/src/scss/icons/variables.scss
+++ b/src/scss/icons/variables.scss
@@ -1,13 +1,18 @@
 $icomoon-font-family: "icomoon" !default;
 $icomoon-font-path: "./icons/fonts" !default;
 
+$icon-user: "\e908";
+$icon-menu-skills: "\e906";
+$icon-menu-timeline: "\e907";
 $icon-svelte: "\e904";
+$icon-menu-contact: "\e909";
 $icon-heart: "\e905";
 $icon-envelope-o: "\e903";
 $icon-checkmark: "\e902";
 $icon-check-alt: "\e901";
 $icon-mouse: "\e900";
-$icon-project: "\e925";
+$icon-portfolio-item: "\e924";
+$icon-menu-portolio: "\e925";
 $icon-whatsapp: "\ea93";
 $icon-github: "\eab0";
 $icon-linkedin: "\eac9";
