--- a/src/scss/icons/style.scss
+++ b/src/scss/icons/style.scss
@@ -3,9 +3,9 @@
 @font-face {
   font-family: '#{$icomoon-font-family}';
   src:
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?9xyxoe') format('truetype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?9xyxoe') format('woff'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?9xyxoe##{$icomoon-font-family}') format('svg');
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?dbsn7b') format('truetype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?dbsn7b') format('woff'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?dbsn7b##{$icomoon-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -26,10 +26,30 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-user {
+  &:before {
+    content: $icon-user; 
+  }
+}
+.icon-menu-skills {
+  &:before {
+    content: $icon-menu-skills; 
+  }
+}
+.icon-menu-timeline {
+  &:before {
+    content: $icon-menu-timeline; 
+  }
+}
 .icon-svelte {
   &:before {
     content: $icon-svelte;     
     color: #ff3e00;
+  }
+}
+.icon-menu-contact {
+  &:before {
+    content: $icon-menu-contact; 
   }
 }
 .icon-heart {
@@ -57,9 +77,14 @@
     content: $icon-mouse; 
   }
 }
-.icon-project {
+.icon-portfolio-item {
   &:before {
-    content: $icon-project; 
+    content: $icon-portfolio-item; 
+  }
+}
+.icon-menu-portolio {
+  &:before {
+    content: $icon-menu-portolio; 
   }
 }
 .icon-whatsapp {
