--- a/src/scss/icons/variables.scss
+++ b/src/scss/icons/variables.scss
@@ -1,13 +1,11 @@
 $icomoon-font-family: "icomoon" !default;
 $icomoon-font-path: "./icons/fonts" !default;
 
+$icon-medal: "\e90a";
+$icon-svelte: "\e904";
 $icon-user: "\e908";
 $icon-menu-skills: "\e906";
 $icon-menu-timeline: "\e907";
-$icon-svelte: "\e904";
-$icon-menu-contact: "\e909";
-$icon-heart: "\e905";
-$icon-envelope-o: "\e903";
 $icon-checkmark: "\e902";
 $icon-check-alt: "\e901";
 $icon-mouse: "\e900";
@@ -18,4 +16,11 @@ $icon-github: "\eab0";
 $icon-linkedin: "\eac9";
 $icon-linkedin2: "\eaca";
 $icon-stackoverflow: "\ead0";
+$icon-ribbon: "\e9d2";
+$icon-play: "\ea1c";
+$icon-pause: "\ea1d";
+$icon-stop: "\ea1e";
+$icon-menu-contact: "\e909";
+$icon-heart: "\e905";
+$icon-envelope-o: "\e903";
 
