--- a/src/scss/components/partials/_nav.scss
+++ b/src/scss/components/partials/_nav.scss
@@ -8,6 +8,7 @@
     z-index: 120;
 
     ul {
+        position: relative;
         background-color: rgba(0, 0, 0, .5);
         backdrop-filter: blur(10px);
         display: flex;
@@ -22,6 +23,9 @@
         box-shadow: 3px 3px 25px rgba(0, 0, 0, .6);
 
         li {
+            position: relative;
+            z-index: 1;
+
             a {
                 color: $white;
                 display: block;
