--- a/src/scss/icons/style.css
+++ b/src/scss/icons/style.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'icomoon';
   src:
-    url('fonts/icomoon.ttf?dbsn7b') format('truetype'),
-    url('fonts/icomoon.woff?dbsn7b') format('woff'),
-    url('fonts/icomoon.svg?dbsn7b#icomoon') format('svg');
+    url('fonts/icomoon.ttf?9o1z30') format('truetype'),
+    url('fonts/icomoon.woff?9o1z30') format('woff'),
+    url('fonts/icomoon.svg?9o1z30#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -24,6 +24,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-medal:before {
+  content: "\e90a";
+}
+.icon-svelte:before {
+  content: "\e904";
+  color: #ff3e00;
+}
 .icon-user:before {
   content: "\e908";
 }
@@ -32,19 +39,6 @@
 }
 .icon-menu-timeline:before {
   content: "\e907";
-}
-.icon-svelte:before {
-  content: "\e904";
-  color: #ff3e00;
-}
-.icon-menu-contact:before {
-  content: "\e909";
-}
-.icon-heart:before {
-  content: "\e905";
-}
-.icon-envelope-o:before {
-  content: "\e903";
 }
 .icon-checkmark:before {
   content: "\e902";
@@ -75,4 +69,25 @@
 }
 .icon-stackoverflow:before {
   content: "\ead0";
+}
+.icon-ribbon:before {
+  content: "\e9d2";
+}
+.icon-play:before {
+  content: "\ea1c";
+}
+.icon-pause:before {
+  content: "\ea1d";
+}
+.icon-stop:before {
+  content: "\ea1e";
+}
+.icon-menu-contact:before {
+  content: "\e909";
+}
+.icon-heart:before {
+  content: "\e905";
+}
+.icon-envelope-o:before {
+  content: "\e903";
 }
