--- a/src/scss/_btn.scss
+++ b/src/scss/_btn.scss
@@ -55,6 +55,7 @@
             font-size: 3rem;
             color: $secondary;
             background-clip: text;
+            -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
     }
