--- a/src/scss/codeit.scss
+++ b/src/scss/codeit.scss
@@ -32,6 +32,7 @@
 @import './footer';
 @import './lists';
 @import './cards';
+@import './wavesurfer';
 
 @import './components/partials/timeline';
 @import './components/partials/nav';
