Change badges color

--- a/src/scss/_lists.scss
+++ b/src/scss/_lists.scss
@@ -84,7 +84,7 @@
 
     &-badges {
         li {
-            background: linear-gradient(-45deg, darken(#ee7752, 7), darken(#e73c7e, 5));
+            background: linear-gradient(-45deg, #ee7752, #e73c7e);
             color: $white;
             font-size: .8rem;
             font-weight: 600;
