--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,6 +6,7 @@ $primary: #3d2e8c;
 $secondary: #17dbff;
 $white: #FBFEF9;
 $dark: #1B1B1E;
+$purple: #d91687;
 
 $body-bg: darken($primary, 22);
 $body-color: lighten(#1B1B1E, 60);
