--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -14,3 +14,9 @@ strong {
 .text-purple {
     color: $purple;
 }
+
+.ff-monospace {
+    font-family: $font-family-monospace !important;
+    text-decoration: none !important;
+    font-size: .9rem;
+}
