--- a/src/scss/codeit.scss
+++ b/src/scss/codeit.scss
@@ -40,5 +40,6 @@
 @import './components/about';
 @import './components/experience';
 @import './components/portfolio';
+@import './components/curriculum';
 
 @import './icons/style.scss';
