--- a/src/scss/_btn.scss
+++ b/src/scss/_btn.scss
@@ -34,6 +34,7 @@
         }
 
         .bi {
+            display: block;
             background: linear-gradient(-45deg, #ee7752, #e73c7e);
             font-size: 3rem;
             color: $secondary;
