--- a/src/scss/_btn.scss
+++ b/src/scss/_btn.scss
@@ -39,6 +39,7 @@
             font-size: 3rem;
             color: $secondary;
             background-clip: text;
+            text-shadow: 0px 0px #00000000;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
