--- a/src/scss/_btn.scss
+++ b/src/scss/_btn.scss
@@ -34,14 +34,25 @@
         }
 
         .bi {
-            display: block;
+            display: inline-block !important;
             background: linear-gradient(-45deg, #ee7752, #e73c7e);
             font-size: 3rem;
             color: $secondary;
-            background-clip: text;
             text-shadow: 0px 0px #00000000;
+
+            // Browser specific implementations
             -webkit-background-clip: text;
+            -moz-background-clip: text;
+            -ms-background-clip: text;
+            -o-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
+            -moz-text-fill-color: transparent;
+            -ms-text-fill-color: transparent;
+            -o-text-fill-color: transparent;
+            text-fill-color: transparent;
+            -webkit-box-decoration-break: clone;
+            box-decoration-break: clone;
         }
     }
 
