--- a/src/scss/codeit.scss
+++ b/src/scss/codeit.scss
@@ -1,23 +1,21 @@
-@import "./variables";
+@import "bootstrap/scss/functions";
 
-@import "bootstrap/scss/functions"; // Required
-@import "bootstrap/scss/variables"; // Required
-@import "bootstrap/scss/mixins"; // Required
+@import "variables";
+@import "bootstrap/scss/variables";
 
-@import "bootstrap/scss/root"; // Required
-@import "bootstrap/scss/reboot"; // Required
+@import "bootstrap/scss/maps";
+@import "bootstrap/scss/mixins";
+@import "bootstrap/scss/root";
+
+@import "bootstrap/scss/utilities";
+@import "bootstrap/scss/reboot";
 @import "bootstrap/scss/type";
+@import "bootstrap/scss/images";
 @import "bootstrap/scss/containers";
 @import "bootstrap/scss/grid";
-@import "bootstrap/scss/buttons";
-@import "bootstrap/scss/forms";
-@import "bootstrap/scss/transitions";
-@import "bootstrap/scss/images";
-@import "bootstrap/scss/spinners";
-@import "bootstrap/scss/card";
 @import "bootstrap/scss/helpers";
-@import "bootstrap/scss/alert";
-@import "bootstrap/scss/utilities";
+@import "bootstrap/scss/buttons";
+
 @import "bootstrap/scss/utilities/api";
 
 @import './body';
